fixing path to screenshot1

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<section>
 					<h3>Introduction: A Bad Example</h3>
-					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="600" height="500" src="/images/screenshot1.png" alt="Down arrow">
+					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="600" height="500" src="images/screenshot1.png" alt="Down arrow">
 				</section>
 
 				<section>
