adding custom stylesheet

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
 
+		<!-- Custom styles used to override reveal.css -->
+		<link rel="stylesheet" href="dist/styles.css"
+
 	</head>
 	<body>
 		<div class="reveal">
@@ -36,6 +39,10 @@
 						<li> Readme </li>
 						<li> Descriptive and "friendly" file names </li>
 					</ol>
+				</section>
+
+				<section>
+					<h3>Project Management</h3>
 				</section>
 			</div>
 		</div>
