--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
+				<section id="intro">
 					<h3>Organize Your Files and Metadata for Transparent and Reproducible Research</h3>
 					<p>Jenn Huck</p>
 					<p>UVA Library</p>
@@ -29,7 +29,7 @@
 
 				<section>
 					<h3>Introduction: A Bad Example</h3>
-					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="600" height="500" data-src="public/images/screenshot1.png" alt="Down arrow">
+					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="600" height="500" data-src="public/images/screenshot1.png" alt="example spreadsheet">
 				</section>
 
 				<section>
@@ -41,8 +41,10 @@
 					</ol>
 				</section>
 
-				<section>
+				<section id="projectManagement">
 					<h3>Project Management</h3>
+					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="800" height="450" data-src="public/images/screenshot2.png" alt="Project Management diagram">
+					<p>Image: https://reproducible-science-curriculum.github.io/</p>
 				</section>
 			</div>
 		</div>
