addding slides and assets for slides 13-20

--- a/index.html
+++ b/index.html
@@ -138,6 +138,72 @@
 					<p class="imageSubtext">Image: https://datacarpentry.org/r-socialsci/00-intro/index.html</p>
 				</section>
 
+				<section>
+					<h3>A more complex example</h3>
+					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="800" height="400" data-src="public/images/screenshot5.png" alt="more complex project folder structure">
+					<p class="imageSubtext">Image: Ties de Kok: https://towardsdatascience.com/how-to-keep-your-research-projects-organized-part-1-folder-structure-10bd56034d3a</p>
+				</section>
+
+				<section>
+					<h3>Automate your folder structure</h3>
+					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="500" height="500" data-src="public/images/screenshot6.png" alt="automate your folder structure with github">
+					<p class="imageSubtext">Image: https://github.com/Reproducible-Science-Curriculum/rr-init </p>
+				</section>
+			
+				<section>
+					<h3>Project Organization</h3>
+					<ul>
+						<li>Good. <span>Separate input and code from output using different folders or file names and keep track of all the 
+						input -> output changes in separate files</span></li>
+						<li>Better. <span>Consistent folder structure across projects. Read-only raw data</span></li>
+						<li>Best. <span>Script to generate folder structures, version control READMEs and scripts to track modifications</span></li>
+					</ul>
+				</section>
+
+				<section>
+					<p>Build out a project structure with explorer/finder</p>
+					<p>and then visit bit.ly/org4repro</p>
+				</section>
+
+				<section>
+					<h3>README</h3>
+					<p>Just a little bit of documentation</p>
+				</section>	
+
+				<section id='readmeFile'>
+					<h3><span class='readmeSpan'>README</span> file</p></h3>
+					<ul>
+						<li>A <span class='readmeSpan'>README</span> gives users important information about a project</li>
+						<li>Should be in plain text format (either plain text/.txt or Markdown/.md)</li>
+						<p>Useful <span class='readmeSpan'>README</span> file content:</p>
+						<ol>
+							<li>Project Name</li>
+							<li>Useful dates (date project began, date last updated)</li>
+							<li>Author names and contact info</li>
+							<li>Origin of data</li>
+							<li>3-4 sentences about the goal of the project</li>
+							<li>Dependencies / How to install / Project structure</li>
+						</ol>
+					</ul>
+				</section>
+
+				<section>
+					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="800" height="650" data-src="public/images/screenshot7.png" alt="readme screenshot">
+				</section>
+
+				<section>
+					<h3>README: Good, Better, Best</h3>
+					<ul>
+						<li>Good. <span>Plain text</span></li>
+						<li>Better. <span>Date, name, contact info, short summary, Markdown</span></li>
+						<li>Best. <span>Include history of all changes to the project</span></li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Naming Files</h3>
+				</section>
+
 			</div>
 		</div>
 
