addding slides and assets for slides 20-25

--- a/index.html
+++ b/index.html
@@ -204,6 +204,43 @@
 					<h3>Naming Files</h3>
 				</section>
 
+				<section>
+					<h3>Names Matter</h3>
+					<p>Three principles for file names</p>
+					<ul>
+						<li>Human readable</li>
+						<li>Machine readable</li>
+						<li>Plays well with default ordering</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Human readable</h3>
+					<ul>
+						<li>Names indicate content</li>
+						<ul>
+							<li>01_data-cleaning.R</li>
+							<li>02_visualization.R</li>
+						</ul>
+						<li>Vs</li>
+						<ul>
+							<li>01.R</li>
+							<li>02.R</li>
+						</ul>
+						<li>Easy to figure out based on the name</li>
+					</ul>
+				</section>
+				
+				<section>
+					<h3>Naming conventions: Use names to convey order</h3>
+					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="600" height="500" data-src="public/images/screenshot8.png" alt="screenshot - use names to convery file order">
+				</section>
+
+				<section>
+					<h3>Naming conventions: Use names to convey history</h3>
+					<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="600" height="500" data-src="public/images/screenshot9.png" alt="screenshot - use names to convery file history">
+				</section>
+
 			</div>
 		</div>
 
